tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of vehicle '1' is empty.
Error: Invalid departSpeed definition for vehicle '1';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
